# Code-Editor

./: .gitmodules  CMakeLists.txt  README.md  RobLy.json  linux-build.sh  vcpkg.json
Utils/Examples/Sample_Code/: main.py
Utils/LibraryFolder/PYTHON/: jog.tap  main.py  rosjog.py
Utils/LibraryFolder/PYTHON/includes/: arctosgui_config.rviz  gcode.txt  jog.txt
Utils/Models/objects/3d robot arm with IK bones/: 3d robot arm without IK bones.mtl
src/: ArmSimPro.cpp  CMakeLists.txt  CodeEditor.cpp  CodeEditor.hpp  RobLy_Core.cpp  RoboMaster_Core.cpp  Utility.hpp
src/Algorithms/: CMakeLists.txt  Search.cpp  Search.h
src/CodeEditor/: AppLog.hpp  CMakeLists.txt  CodeEditor.cpp  CodeEditor.hpp  Editor.cpp  Editor.hpp  FileHandler.cpp  FileHandler.h  Utility.hpp
src/Editor/: Async_Wrapper.hpp  CMakeLists.txt  CmakeLists.txt  CmdPanel.cpp  CmdPanel.h  CommandHandler.cpp  CommandHandler.hpp  Coordinate.hpp  DirectoryTree.cpp  DirectoryTree.h  Editor.cpp  Editor.hpp  TextEditor.cpp  TextEditor.h
src/FileDialog/: CMakeLists.txt  FileDialog.cpp  FileDialog.h  FileHandler.cpp  FileHandler.h
src/Graphics3D/: CMakeLists.txt  DeviceResourcesPC.cpp  DeviceResourcesPC.h  Graphics3D.cpp  Graphics3D.h  RenderTexture.cpp  RenderTexture.h  StepTimer.h  pch.h
src/IconFontHeaders/: GenerateIconFontCppHeaders.py  IconsCodicons.h  IconsFontAwesome4.h  IconsFontAwesome5.h  IconsFontAwesome5Brands.h  IconsFontAwesome6Brands.h  IconsFontaudio.h  IconsForkAwesome.h  IconsKenney.h  IconsLucide.h  IconsMaterialDesign.h  IconsMaterialDesignIcons.h
src/ImageHandler/: CMakeLists.txt  ImageHandler.cpp  ImageHandler.h  Utils.h
src/MenuBar/: CMakeLists.txt
src/StatusBar/: CMakeLists.txt  StatusBar.cpp  StatusBar.h  imgui_addOns.cpp  imgui_addOns.hpp
src/TerminalEmulator/: CMakeLists.txt  PseudoTerminal.h
src/TerminalEmulator/Hexe/System/: Pipe.h  Process.h
src/TerminalEmulator/Hexe/Terminal/: IPseudoTerminal.h  ImGuiTerminal.h  PseudoTerminal.h
src/TerminalEmulator/src/: AutoHandle.cpp  ImGuiTerminal.cpp  ImGuiTerminal.keys.h  Pipe.win32.cpp  Process.cpp  Process.win32.cpp  ProcessFactory.cpp  PseudoTerminal.cpp  PseudoTerminal.win32.cpp  TerminalDisplay.cpp  TerminalEmulator.cpp  boxdraw_data.h
src/ToolBar/: CMakeLists.txt  ToolBar.cpp  ToolBar.h
src/WindowManager/: CMakeLists.txt  WindowManager.cpp  WindowManager.hpp
src/imgui/: CMakeLists.txt  imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_freetype_ex.cpp  imgui_impl_sdl2.cpp  imgui_impl_win32.cpp  imgui_internal.h  imgui_stdlib.cpp  imgui_stdlib.h  imgui_tables.cpp  imgui_widgets.cpp  stb_image.h
